[package]
name = "qusb2snes-client"
description = "Client for Qusb2snes websocket interface"
version = "0.1.0"
edition = "2021"
authors = ["Jacob Helwig <jacob@technosorcery.net>"]
license = "MIT"
repository = "https://github.com/jhelwig/qusb2snes-client"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.34.0"
serde = { version = "1.0.131", features = ["derive"] }
serde_json = "1.0.72"
tokio = { version = "1.14.0", features = ["full"] }
websockets = "0.3.0"
