[package]
name = "qusb2snes-client"
description = "Client for Qusb2snes websocket interface"
version = "0.1.1"
edition = "2021"
authors = ["Jacob Helwig <jacob@technosorcery.net>"]
license = "MIT"
repository = "https://github.com/jhelwig/qusb2snes-client"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.131", features = ["derive"] }
serde_json = "1.0.72"
websockets = "0.3.0"

[dev-dependencies]
clap = "2.34.0"
tokio = { version = "1.14.0", features = ["full"] }

[[example]]
name = "qusb2snes-cli"
